--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.23.6",
     "angular-in-memory-web-api": "0.5.3",
+    "angular-webstorage-service": "1.0.2",
     "chart.js": "2.7.2",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.3",
