--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "angular-calendar": "0.23.6",
     "angular-in-memory-web-api": "0.5.3",
     "angular-webstorage-service": "1.0.2",
+    "auth0-js": "9.5.1",
     "chart.js": "2.7.2",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.3",
